objects/Numbering_Series__c/Numbering_Series__c.object-meta.xml
<CustomObject>
    <label>Numbering Series</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Numbering Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>