objects/Numbering_Series__c/fields/Last_Number_Used__c.field-meta.xml
<CustomField>
    <fullName>Last_Number_Used__c</fullName>
    <label>Last Number Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>