objects/Numbering_Series__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>