objects/Numbering_Series__c/fields/Separator__c.field-meta.xml
<CustomField>
    <fullName>Separator__c</fullName>
    <label>Separator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>