objects/Numbering_Series__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prefix__c</columns>
    <columns>Last_Number_Used__c</columns>
    <columns>Separator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>